# tank-game

./: .clang-format  CMakeLists.txt
resources/: map01.aseprite  tank.aseprite
src/: Battlefield.cpp  Battlefield.hpp  Game.cpp  Game.hpp  MathUtils.cpp  MathUtils.hpp  SceneNode.cpp  SceneNode.hpp  Tank.cpp  Tank.hpp  Utils.cpp  Utils.hpp  main.cpp
